Accordion UI fixed

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Aapni Lazarev</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="shortcut icon" href="./assets/img/favicon.gif" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/utils.css">
-    <link rel="stylesheet" href="./css/media.css">
-    <link rel="stylesheet" href="./css/megneticButton.css">
-    <link rel="stylesheet" href="./css/mouse-follower.min.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/utils.css">
+    <link rel="stylesheet" href="./styles/media.css">
+    <link rel="stylesheet" href="./styles/megneticButton.css">
+    <link rel="stylesheet" href="./styles/mouse-follower.min.css">
 </head>
 
 <body>
@@ -438,98 +438,7 @@
                         Frequently Asked <br> Questions
                     </h1>
                 </div>
-                <div class="faq-main">
-                    <div class="faq-item">
-                        <div class="faq-question-wrap">
-                            <div class="faq--wrap">
-                                <span class="faq-index">/00-1</span>
-                                <h4 class="faq-que">How can your digital product design agency help my startup?</h4>
-                            </div>
-                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>
-                                We're here to support your startup at every stage of its journey, from the initial
-                                pre-seed phases to the later Series D and beyond. Whether it's short-term, fast-paced
-                                initiatives or long-range strategic plans, we'll be by your side, providing the guidance
-                                you need. Our product designers deliver custom-tailored design services based on your
-                                business objectives.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <div class="faq-question-wrap">
-                            <div class="faq--wrap">
-                                <span class="faq-index">/00-2</span>
-                                <h4 class="faq-que">Do you offer only digital product design services?</h4>
-                            </div>
-                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>
-                                Our UI UX designers use Figma to design digital interfaces, while our motion guys use
-                                Adobe After Effects to create stunning motion. But that’s not all. We also use user
-                                research and data analytics software like Maze, Hotjar, and Google Analytics to get
-                                valuable insights into user behavior and evaluate the success of our UI UX
-                                designs.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <div class="faq-question-wrap">
-                            <div class="faq--wrap">
-                                <span class="faq-index">/00-3</span>
-                                <h4 class="faq-que">What Digital design tools and technologies do you use?</h4>
-                            </div>
-                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>
-                                Our UI UX designers use Figma to design digital interfaces, while our motion guys use
-                                Adobe After Effects to create stunning motion. But that’s not all. We also use user
-                                research and data analytics software like Maze, Hotjar, and Google Analytics to get
-                                valuable insights into user behavior and evaluate the success of our UI UX
-                                designs.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <div class="faq-question-wrap">
-                            <div class="faq--wrap">
-                                <span class="faq-index">/00-4</span>
-                                <h4 class="faq-que">How long does the entire design process take?</h4>
-                            </div>
-                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>
-                                Digital product design varies from 4 weeks to 6 months and more. Meanwhile, other design
-                                services like UI and UX design, motion design, brand identity, or website development
-                                might take less. It all depends on the complexity of your project and the iterative
-                                process we develop to achieve your objectives. Contact us to determine your specific
-                                needs and requirements as well as the time and budget estimations for your project.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <div class="faq-question-wrap">
-                            <div class="faq--wrap">
-                                <span class="faq-index">/00-5</span>
-                                <h4 class="faq-que">How much do you charge for digital product design services?</h4>
-                            </div>
-                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>
-                                The cost of digital product design depends on the scope of work and your project’s
-                                complexity. Our minimum engagement on product design is $20k. Other digital design
-                                services like UX and UI design, branding, website design, and motion graphics have a
-                                minimum engagement of $5k.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
+                <div class="faq-main" id="faqContainer"></div>
             </div>
         </section>
     </main>
