responsive layouts updated

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
                 <!-- NAV LINK CONTAINER -->
                 <div class="nav-links-container">
-                    <a data-cursor-stick href="#" class="nav-link">WHAT WE DO </a>
-                    <a data-cursor-stick href="#" class="nav-link">CASES</a>
-                    <a data-cursor-stick href="#" class="nav-link">OUTCOMES</a>
-                    <a data-cursor-stick href="#" class="nav-link">NEWS</a>
+                    <a data-cursor-stick href="./pages/underwork.html" target="_blank" class="nav-link">WHAT WE DO </a>
+                    <a data-cursor-stick href="./pages/underwork.html" target="_blank" class="nav-link">CASES</a>
+                    <a data-cursor-stick href="./pages/underwork.html" target="_blank" class="nav-link">OUTCOMES</a>
+                    <a data-cursor-stick href="./pages/underwork.html" target="_blank" class="nav-link">NEWS</a>
                     <button data-cursor-stick class="morph-btn morph-btn-lets">
                         <div class="morph-btn-stagger-wrapper" anm-stagger-btn="wrap" anm-direction="up"
                             anm-reverse="false" anm-stagger="0.0055" anm-delay="0" anm-duration="0.9"
@@ -76,10 +76,10 @@
                 </div>
                 <div class="media-nav-link-container">
                     <a href="index.html" class="media-nav-link">Home</a>
-                    <a href="working.html" class="media-nav-link">Portfolio</a>
-                    <a href="working.html" class="media-nav-link">About us</a>
-                    <a href="working.html" class="media-nav-link">Our Services</a>
-                    <a href="working.html" class="media-nav-link">Contact</a>
+                    <a href="./pages/underwork.html" target="_blank" class="media-nav-link">Portfolio</a>
+                    <a href="./pages/underwork.html" target="_blank" class="media-nav-link">About us</a>
+                    <a href="./pages/underwork.html" target="_blank" class="media-nav-link">Our Services</a>
+                    <a href="./pages/underwork.html" target="_blank" class="media-nav-link">Contact</a>
                 </div>
                 <div class="cb-tagreel w-full">
                     <div class="cb-tagreel-content">
@@ -103,7 +103,6 @@
                     </div>
                 </div>
             </nav>
-
         </header>
         <section class="component component--primary">
             <div class="primary-wrapper">
@@ -114,6 +113,7 @@
                     </pre>
                     </h1>
                     <h1 class="primary-title">UX-First Design Agency <br> for B2B + AI Companies</h1>
+                    <h1 class="primary-title-sm">UX-First Design Agency for B2B + AI Companies</h1>
                     <p class="primary-paragraph">
                         We launch <span class="t--green">MVPs</span> redefine <span class="t--green">existing
                             products</span>
@@ -441,6 +441,65 @@
                 <div class="faq-main" id="faqContainer"></div>
             </div>
         </section>
+        <footer class="footer component component-footer">
+            <div class="footer-inner">
+                <div class="footer-contact">
+                    <h2 data-cursor-text="CONTACT" data-cursor-stick>Have a project<br>in mind?<br>Contact Us!</h2>
+                    <div class="footer-columns">
+                        <div>
+                            <p class="footer-label">SHAPING EXPERIENCES:</p>
+                            <ul>
+                                <li>UX Audit</li>
+                                <li>UI Design</li>
+                                <li>UX Design</li>
+                                <li>UX Research</li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <p class="footer-label">WHERE WE SHINE:</p>
+                            <ul>
+                                <li>SaaS</li>
+                                <li>Web App</li>
+                                <li>Mobile App</li>
+                                <li>Website Design</li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <p class="footer-label">BEHIND THE SCREENS:</p>
+                            <ul>
+                                <li><a href="./pages/underwork.html" target="_blank">OUR STORY</a></li>
+                                <li><a href="./pages/underwork.html" target="_blank">CAREERS</a></li>
+                                <li><a href="./pages/underwork.html" target="_blank">TERMS OF SERVICES</a></li>
+                                <li><a href="./pages/underwork.html" target="_blank">PRIVACY POLICY</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-connect">
+                    <p class="footer-label">LET’S CONNECT:</p>
+                    <button class="footer-button">SEE REPLICA CREDIT</button>
+
+                    <p class="footer-label">OUR LOCATION:</p>
+                    <p class="footer-location">
+                        1300 W El Camino Real<br>
+                        #100, Mountain View,<br>
+                        CA 94040
+                    </p>
+
+                    <p class="footer-label">OUR SOCIAL:</p>
+                    <div class="footer-social">
+                        <button>LINKEDIN</button>
+                        <button>FACEBOOK</button>
+                        <button>INSTAGRAM</button>
+                        <button>DRIBBBLE</button>
+                        <button>BEHANCE</button>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
@@ -458,3 +517,10 @@
 </body>
 
 </html>
+
+<!--  
+Video Player
+hero animations
+Credit Section
+loader
+ -->
