--- a/pages/underwork.html
+++ b/pages/underwork.html
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="elements">
             <h1 id="dynamicTitle" class="title">Page Underwork!</h1>
-            <button class="button">
+            <button class="button credit-show-btn">
                 <div class="button__filler"></div>
                 <span class="button__text">
                     <span class="button__text-inner">SEE REPLICA CREDITS</span>
@@ -65,6 +65,29 @@
             </button>
         </div>
     </div>
+    <section class="overlay" id="creditsOverlay">
+        <div class="credits-modal">
+            <button class="close-btn" onclick="closeCredits()">×</button>
+
+            <div class="credits-image">
+                <img src="../assets/img/oliver.png" alt="Credits Image" />
+            </div>
+
+            <div class="credits-content">
+                <h2>Credits</h2>
+                <div class="credits-grid">
+                    <div>
+                        <p class="label">Code & Animations</p>
+                        <p class="name">Oliver Felix</p>
+                    </div>
+                    <div>
+                        <p class="label">Design</p>
+                        <p class="name">Lazarev Original</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
     <script src="../js/megneticButton.js"></script>
     <script>
@@ -78,6 +101,13 @@
             );
             title.style.fontWeight = fontWeight;
         });
+        document.querySelector(".credit-show-btn").addEventListener("click", () => {
+            document.getElementById("creditsOverlay").style.display = "flex";
+        });
+
+        function closeCredits() {
+            document.getElementById("creditsOverlay").style.display = "none";
+        }
     </script>
 </body>
 
