--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
                     <p class="footer-label">OUR SOCIAL:</p>
                     <div class="footer-social">
-                        <button>LINKEDIN</button>
+                        <button>GITHUB</button>
                         <button>FACEBOOK</button>
                         <button>INSTAGRAM</button>
                         <button>DRIBBBLE</button>
@@ -521,7 +521,7 @@
                     <div class="credits-grid">
                         <div>
                             <p class="label">Code & Animations</p>
-                            <p class="name">Oliver Felix</p>
+                            <a href="https://github.com/oliverfelixdev/" class="name">Oliver Felix</a>
                         </div>
                         <div>
                             <p class="label">Design</p>
