--- a/pages/underwork.html
+++ b/pages/underwork.html
@@ -38,6 +38,10 @@
             transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
+        h2 {
+            font-weight: initial;
+        }
+
         @media only screen and (max-width: 768px) {
             #dynamicTitle {
                 font-size: 4rem;
@@ -78,7 +82,7 @@
                 <div class="credits-grid">
                     <div>
                         <p class="label">Code & Animations</p>
-                        <p class="name">Oliver Felix</p>
+                        <a href="https://github.com/oliverfelixdev/" class="name">Oliver Felix</a>
                     </div>
                     <div>
                         <p class="label">Design</p>
