--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aapni Lazarev</title>
+    <title>Lazarev : Digital Design Agency</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="shortcut icon" href="./assets/img/favicon.gif" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
@@ -511,11 +511,9 @@
         <section class="overlay" id="creditsOverlay">
             <div class="credits-modal">
                 <button class="close-btn" onclick="closeCredits()">×</button>
-
-                <div class="credits-image">
+                <a href="https://github.com/oliverfelixdev/" class="credits-image">
                     <img src="./assets/img/oliver.png" alt="Credits Image" />
-                </div>
-
+                </a>
                 <div class="credits-content">
                     <h2>Credits</h2>
                     <div class="credits-grid">
@@ -546,10 +544,3 @@
 </body>
 
 </html>
-
-<!--  
-Video Player
-hero animations
-Credit Section
-loader
- -->
